--- a/index.html
+++ b/index.html
@@ -97,7 +97,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body class="bg-love-light min-h-screen overflow-x-hidden">
-		<!-- 音乐控制 -->
+	<!-- 音乐控制 -->
+    <div class="fixed top-4 right-4 z-50 bg-white/80 backdrop-blur-sm p-3 rounded-full shadow-lg flex items-center gap-3">
+        <button id="musicToggle" class="text-primary hover:text-accent transition-colors">
+            <i class="fa fa-play" id="playIcon"></i>
+            <i class="fa fa-pause hidden" id="pauseIcon"></i>
+        </button>
+        <span class="text-sm font-medium">山楂树之恋</span>
+    </div>
+        <audio id="bgMusic" loop>
+    		<source src="https://raw.githubusercontent.com/T-xiaobo/love/main/程佳佳.mp3" type="audio/mpeg" controls="controls" autoplay loop>
+	</audio>
         <audio source src="https://raw.githubusercontent.com/T-xiaobo/love/main/程佳佳.mp3" type="audio/mpeg" controls="controls" autoplay loop>
     </audio>
 	    <!-- 动态爱心背景 -->
